done except for that huge gap between the title and cards idk how to fix

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body,
 }
 
 .gallery-title:hover {
-  transform: scale(1.5);
+  transform: scale(1.4);
   color: #757575;
 }
 
@@ -146,25 +146,54 @@ body {
     background-color: blue;
   }
   .gallery {
-    transform: scale(0.8);
+    transform: scale(0.9);
   }
-  .card {
+
+  h2.card-text {
+    font-size: 4.25rem;
   }
   .gallery-title {
     font-size: 50px;
   }
+  .gallery-title:hover {
+    transform: scale(1.3);
+    color: #757575;
+  }
+}
+
+@media (max-width: 1024px) {
+  body {
+    background-color: yellow;
+  }
+  .gallery {
+    transform: scale(0.8);
+  }
+  h2.card-text {
+    font-size: 3.75rem;
+  }
+  .gallery-title {
+    font-size: 40px;
+  }
+  .gallery-title:hover {
+    transform: scale(1.25);
+    color: #757575;
+  }
 }
 @media (max-width: 750px) {
   body {
-    background-color: red;
+    background-color: #d32f2f;
   }
   .gallery {
     transform: scale(0.7);
   }
   .gallery-title {
-    font-size: 40px;
+    font-size: 35px;
   }
   h2.card-text {
-    font-size: 3rem;
+    font-size: 3.25rem;
+  }
+  .gallery-title:hover {
+    transform: scale(1.2);
+    color: #757575;
   }
 }
